--- a/Shoppier/res/layout/activity_main.xml
+++ b/Shoppier/res/layout/activity_main.xml
@@ -22,9 +22,9 @@
         android:id="@+id/relativeLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText1"
-        android:layout_alignRight="@+id/editText1"
-        android:layout_below="@+id/editText1"
+        android:layout_alignLeft="@+id/item_name"
+        android:layout_alignRight="@+id/item_name"
+        android:layout_below="@+id/item_name"
         android:layout_marginTop="20dp" >
 
         <Button
@@ -49,7 +49,7 @@
     </RelativeLayout>
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/imageView1"
