--- a/Shoppier/res/layout/activity_main.xml
+++ b/Shoppier/res/layout/activity_main.xml
@@ -67,4 +67,12 @@
         android:text="@string/skip"
         android:clickable="true" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="TextView" />
+
 </RelativeLayout>
