--- a/Shoppier/res/layout/activity_main.xml
+++ b/Shoppier/res/layout/activity_main.xml
@@ -1,76 +1,79 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ScrollView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:fillViewport="true">
+    android:layout_height="match_parent"
+    android:background="@drawable/back"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity" >
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp"
+        android:contentDescription="@string/icon"
+        android:src="@drawable/shoppier" />
 
     <RelativeLayout
+        android:id="@+id/relativeLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/back"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context=".MainActivity" >
+        android:layout_alignLeft="@+id/item_name"
+        android:layout_alignRight="@+id/item_name"
+        android:layout_below="@+id/item_name"
+        android:layout_marginTop="20dp" >
 
-        <ImageView
-            android:id="@+id/imageView1"
+        <Button
+            android:id="@+id/btnLogout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="30dp"
-            android:contentDescription="@string/icon"
-            android:src="@drawable/shoppier" />
-
-        <RelativeLayout
-            android:id="@+id/relativeLayout1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/item_name"
-            android:layout_alignRight="@+id/item_name"
-            android:layout_below="@+id/item_name"
-            android:layout_marginTop="20dp" >
-
-            <Button
-                android:id="@+id/button1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:text="@string/login" />
-
-            <EditText
-                android:id="@+id/editText2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toLeftOf="@+id/button1"
-                android:ems="10"
-                android:hint="@string/password"
-                android:inputType="textPassword" >
-
-                <requestFocus />
-            </EditText>
-        </RelativeLayout>
+            android:layout_alignParentRight="true"
+            android:text="@string/login" />
 
         <EditText
-            android:id="@+id/item_name"
+            android:id="@+id/editText2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/imageView1"
-            android:layout_centerHorizontal="true"
+            android:layout_toLeftOf="@+id/btnLogout"
             android:ems="10"
-            android:hint="@string/username" />
+            android:hint="@string/password"
+            android:inputType="textPassword" >
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/relativeLayout1"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="14dp"
-            android:clickable="true"
-            android:text="@string/skip" />
+            <requestFocus />
+        </EditText>
+
     </RelativeLayout>
 
-</ScrollView>
+    <EditText
+        android:id="@+id/item_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/imageView1"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:hint="@string/username" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/relativeLayout1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="14dp"
+        android:text="@string/skip"
+        android:clickable="true" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/item_name"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_marginBottom="29dp"
+        android:text="TextView" />
+
+</RelativeLayout>
