--- a/Shoppier/res/layout/activity_splash.xml
+++ b/Shoppier/res/layout/activity_splash.xml
@@ -19,7 +19,7 @@
         android:src="@drawable/shoppier" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/btnLogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/imageView1"
@@ -34,5 +34,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp"
         android:text="Skip Login" />
+
+    <Button
+        android:id="@+id/test"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button2"
+        android:layout_toLeftOf="@+id/button2"
+        android:text="Test" />
 
 </RelativeLayout>
