--- a/Shoppier/res/layout/activity_groc_list.xml
+++ b/Shoppier/res/layout/activity_groc_list.xml
@@ -44,4 +44,13 @@
         android:layout_toLeftOf="@+id/but_add"
         android:text="Sync" />
 
+    <Button
+        android:id="@+id/searchBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/btnLogout"
+        android:layout_alignBottom="@+id/btnLogout"
+        android:layout_toRightOf="@+id/btnLogout"
+        android:text="Search" />
+
 </RelativeLayout>
