--- a/Shoppier/res/layout/activity_main.xml
+++ b/Shoppier/res/layout/activity_main.xml
@@ -72,8 +72,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/item_name"
+        android:layout_centerHorizontal="true"
         android:layout_alignLeft="@+id/textView1"
         android:layout_marginBottom="29dp"
-        android:text="TextView" />
+        android:text="@string/app_name" />
 
 </RelativeLayout>
