--- a/Shoppier/res/layout/searachable_itemview.xml
+++ b/Shoppier/res/layout/searachable_itemview.xml
@@ -22,6 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="52dp"
+        android:focusable="false"
+		android:focusableInTouchMode="false"
         android:text="+" />
     
 </LinearLayout>
