--- a/Shoppier/res/layout/activity_search.xml
+++ b/Shoppier/res/layout/activity_search.xml
@@ -10,7 +10,7 @@
     tools:context=".SearchActivity" >
 
     <ListView
-        android:id="@android:id/list"
+        android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -34,3 +34,5 @@
     </EditText>
 
 </RelativeLayout>
+
+
