--- a/Shoppier/res/layout/searachable_itemview.xml
+++ b/Shoppier/res/layout/searachable_itemview.xml
@@ -9,21 +9,17 @@
         android:id="@+id/brand"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textStyle="bold" />
     
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000" />
+        android:textColor="#000000" 
+        android:textSize="16sp"/>
 
-    <Button
-        android:id="@+id/addItemBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="52dp"
-        android:focusable="false"
-		android:focusableInTouchMode="false"
-        android:text="+" />
+
     
 </LinearLayout>
