--- a/Shoppier/res/layout/activity_groc_list.xml
+++ b/Shoppier/res/layout/activity_groc_list.xml
@@ -13,9 +13,9 @@
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/include1"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/but_add" >
-
     </ListView>
 
     <ImageButton
@@ -52,5 +52,14 @@
         android:layout_alignBottom="@+id/btnLogout"
         android:layout_toRightOf="@+id/btnLogout"
         android:text="Search" />
+
+    <include
+        android:id="@+id/include1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        layout="@layout/list_footer" />
 
 </RelativeLayout>
