--- a/Shoppier/res/layout/item.xml
+++ b/Shoppier/res/layout/item.xml
@@ -9,8 +9,29 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="TextView" />
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="12dp"
+        android:layout_toRightOf="@+id/textView2"
+        android:text="@string/item_name"
+        android:textSize="16sp" />
+
+<!--     <CheckBox -->
+<!--         android:id="@+id/checkBox1" -->
+<!--         android:layout_width="wrap_content" -->
+<!--         android:layout_height="wrap_content" -->
+<!--         android:layout_alignBaseline="@+id/textView2" -->
+<!--         android:layout_alignBottom="@+id/textView2" -->
+<!--         android:layout_alignParentLeft="true" -->
+<!--         android:text=" " /> -->
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/textView1"
+        android:layout_toRightOf="@+id/checkBox1"
+        android:text="@string/item_brand"
+        android:textSize="16sp" />
 
 </RelativeLayout>
