--- a/Shoppier/res/layout/drawer_item.xml
+++ b/Shoppier/res/layout/drawer_item.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
     android:layout_width="match_parent"
@@ -7,6 +8,9 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:textColor="#FFFFFF" 
-    android:textSize = "15sp">
+    android:textSize="20sp"
+    android:paddingStart="14.5sp"
+    android:paddingEnd="14.5sp"
+    android:minHeight="35sp">
 
 </TextView>
