--- a/Shoppier/res/layout/activity_groc_list.xml
+++ b/Shoppier/res/layout/activity_groc_list.xml
@@ -27,20 +27,11 @@
         android:src="@android:drawable/ic_menu_add" />
 
     <Button
-        android:id="@+id/btnLogout"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/but_add"
-        android:layout_alignLeft="@android:id/list"
-        android:text="Logout" />
-
-    <Button
         android:id="@+id/syncBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/btnLogout"
-        android:layout_alignBottom="@+id/btnLogout"
+        android:layout_alignBaseline="@+id/searchBtn"
+        android:layout_alignBottom="@+id/searchBtn"
         android:layout_toLeftOf="@+id/but_add"
         android:text="Sync" />
 
@@ -48,9 +39,6 @@
         android:id="@+id/searchBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/btnLogout"
-        android:layout_alignBottom="@+id/btnLogout"
-        android:layout_toRightOf="@+id/btnLogout"
         android:text="Search" />
 
     <include
