--- a/Shoppier/res/layout/activity_groc_list.xml
+++ b/Shoppier/res/layout/activity_groc_list.xml
@@ -26,14 +26,7 @@
         android:layout_alignParentTop="true"
         android:src="@android:drawable/ic_menu_add" />
 
-    <Button
-        android:id="@+id/syncBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/searchBtn"
-        android:layout_alignBottom="@+id/searchBtn"
-        android:layout_toLeftOf="@+id/but_add"
-        android:text="Sync" />
+
 
     <Button
         android:id="@+id/searchBtn"
@@ -50,13 +43,12 @@
         android:layout_alignParentRight="true"
         layout="@layout/list_footer" />
 
-    <Button
+    <ImageButton
         android:id="@+id/barcodeSearchButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/syncBtn"
-        android:layout_alignBottom="@+id/syncBtn"
-        android:layout_toLeftOf="@+id/syncBtn"
-        android:text="Barcode" />
+        android:layout_above="@+id/list"
+        android:layout_toLeftOf="@+id/but_add"
+        android:src="@drawable/bar_code_reader2" />
 
 </RelativeLayout>
