--- a/Shoppier/res/layout/add_item.xml
+++ b/Shoppier/res/layout/add_item.xml
@@ -24,7 +24,7 @@
         </EditText>
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/db_add_brand"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/item_name"
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/editText2"
+            android:layout_below="@+id/db_add_brand"
             android:layout_marginTop="34dp"
             android:src="@android:drawable/ic_input_add" />
 
@@ -52,10 +52,10 @@
             android:text="@string/item_name" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/label_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/editText2"
+            android:layout_alignLeft="@+id/db_add_brand"
             android:layout_below="@+id/item_name"
             android:layout_marginTop="20dp"
             android:text="@string/item_brand" />
