--- a/Shoppier/res/layout/item.xml
+++ b/Shoppier/res/layout/item.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical" >
 
    <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/label_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView1"
@@ -22,7 +22,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="6dp"
         android:layout_marginTop="12dp"
-        android:layout_toRightOf="@+id/textView2"
+        android:layout_toRightOf="@+id/label_name"
         android:text="@string/item_name"
         android:textSize="16sp" />
 
