--- a/Shoppier/res/layout/activity_groc_list.xml
+++ b/Shoppier/res/layout/activity_groc_list.xml
@@ -27,12 +27,13 @@
 
 
 
-    <Button
+    <ImageButton
         android:id="@+id/searchBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Search" />
+        android:src="@android:drawable/ic_menu_search" />
 
+    
     <ImageButton
         android:id="@+id/barcodeSearchButton"
         android:layout_width="wrap_content"
