--- a/Shoppier/res/layout/activity_main.xml
+++ b/Shoppier/res/layout/activity_main.xml
@@ -72,15 +72,16 @@
             android:clickable="true"
             android:text="@string/skip" />
 
-        <TextView
-            android:id="@+id/label_name"
+        <ProgressBar
+            android:id="@+id/progressBarMainScreen"
+            style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@+id/item_name"
-            android:layout_alignLeft="@+id/textView1"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="29dp"
-            android:text="@string/app_name" />
+            android:indeterminate="true"
+            android:layout_alignLeft="@+id/item_name"
+            android:layout_alignRight="@+id/item_name" />
+
     </RelativeLayout>
 
 </ScrollView>
