--- a/Shoppier/res/layout/db_add.xml
+++ b/Shoppier/res/layout/db_add.xml
@@ -111,10 +111,10 @@
             android:id="@+id/itemAmt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-             android:layout_toLeftOf="@+id/db_add_loc"
-            android:layout_alignTop="@+id/db_add_loc"
+            android:layout_below="@+id/label_aisle"
+            android:layout_marginTop="19dp"
+            android:layout_toLeftOf="@+id/db_add_container"
             android:text="@string/add_location" />
-
     </RelativeLayout>
 
 </ScrollView>
