--- a/Shoppier/res/layout/add_item.xml
+++ b/Shoppier/res/layout/add_item.xml
@@ -11,7 +11,7 @@
         android:background="@drawable/back" >
 
         <EditText
-            android:id="@+id/item_name"
+            android:id="@+id/login_user"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -24,10 +24,10 @@
         </EditText>
 
         <EditText
-            android:id="@+id/db_add_brand"
+            android:id="@+id/login_pass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/item_name"
+            android:layout_below="@+id/login_user"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="40dp"
             android:ems="10"
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/db_add_brand"
+            android:layout_below="@+id/login_pass"
             android:layout_marginTop="34dp"
             android:src="@android:drawable/ic_input_add" />
 
@@ -46,8 +46,8 @@
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/item_name"
-            android:layout_alignLeft="@+id/item_name"
+            android:layout_alignBottom="@+id/login_user"
+            android:layout_alignLeft="@+id/login_user"
             android:layout_marginBottom="34dp"
             android:text="@string/item_name" />
 
@@ -55,8 +55,8 @@
             android:id="@+id/label_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/db_add_brand"
-            android:layout_below="@+id/item_name"
+            android:layout_alignLeft="@+id/login_pass"
+            android:layout_below="@+id/login_user"
             android:layout_marginTop="20dp"
             android:text="@string/item_brand" />
 
