Abilty to edit items and include QTY and price with items.

--- a/Shoppier/res/layout/activity_main.xml
+++ b/Shoppier/res/layout/activity_main.xml
@@ -28,9 +28,9 @@
             android:id="@+id/relativeLayout1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/item_name"
-            android:layout_alignRight="@+id/item_name"
-            android:layout_below="@+id/item_name"
+            android:layout_alignLeft="@+id/edit_item_name"
+            android:layout_alignRight="@+id/edit_item_name"
+            android:layout_below="@+id/edit_item_name"
             android:layout_marginTop="20dp" >
 
             <Button
@@ -41,7 +41,7 @@
                 android:text="@string/login" />
 
             <EditText
-                android:id="@+id/db_add_brand"
+                android:id="@+id/edit_item_brand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toLeftOf="@+id/btnLogout"
@@ -52,7 +52,7 @@
         </RelativeLayout>
 
         <EditText
-            android:id="@+id/item_name"
+            android:id="@+id/edit_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/imageView1"
@@ -77,10 +77,10 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/item_name"
+            android:layout_above="@+id/edit_item_name"
             android:indeterminate="true"
-            android:layout_alignLeft="@+id/item_name"
-            android:layout_alignRight="@+id/item_name" />
+            android:layout_alignLeft="@+id/edit_item_name"
+            android:layout_alignRight="@+id/edit_item_name" />
 
     </RelativeLayout>
 
