--- a/Shoppier/res/layout/db_add.xml
+++ b/Shoppier/res/layout/db_add.xml
@@ -37,7 +37,7 @@
                 android:inputType="text" />
 
             <EditText
-                android:id="@+id/db_add_brand"
+                android:id="@+id/edit_item_brand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
