--- a/Shoppier/res/layout/item.xml
+++ b/Shoppier/res/layout/item.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/label_name"
-        android:text="@string/quanity" />
+        android:text="" />
 
     <TextView
         android:id="@+id/inputItemQty"
