--- a/Shoppier/res/layout/activity_main.xml
+++ b/Shoppier/res/layout/activity_main.xml
@@ -28,9 +28,9 @@
             android:id="@+id/relativeLayout1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/login_user"
-            android:layout_alignRight="@+id/login_user"
-            android:layout_below="@+id/login_user"
+            android:layout_alignLeft="@+id/add_item_Name"
+            android:layout_alignRight="@+id/add_item_Name"
+            android:layout_below="@+id/add_item_Name"
             android:layout_marginTop="20dp" >
 
             <Button
@@ -41,7 +41,7 @@
                 android:text="@string/login" />
 
             <EditText
-                android:id="@+id/login_pass"
+                android:id="@+id/add_item_brand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toLeftOf="@+id/btnLogout"
@@ -53,7 +53,7 @@
         </RelativeLayout>
 
         <EditText
-            android:id="@+id/login_user"
+            android:id="@+id/add_item_Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/imageView1"
@@ -82,9 +82,9 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/login_user"
-            android:layout_alignLeft="@+id/login_user"
-            android:layout_alignRight="@+id/login_user"
+            android:layout_above="@+id/add_item_Name"
+            android:layout_alignLeft="@+id/add_item_Name"
+            android:layout_alignRight="@+id/add_item_Name"
             android:indeterminate="true" />
                </RelativeLayout>
 
