Added store to be stored with list and new list. Adjusted the look of the drawer. Got a map to show up for find an item. Started cleaning up code and adding more comments.

--- a/Shoppier/res/layout/activity_main.xml
+++ b/Shoppier/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         tools:context=".MainActivity" >
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/mapView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -56,7 +56,7 @@
             android:id="@+id/add_item_Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/imageView1"
+            android:layout_alignBottom="@+id/mapView"
             android:layout_centerHorizontal="true"
             android:background="@drawable/blank"
             android:ems="10"
