--- a/Shoppier/res/layout/activity_drawer.xml
+++ b/Shoppier/res/layout/activity_drawer.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical" 
     android:background="@drawable/back">
         <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/mapView"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/info" />
