--- a/Shoppier/res/layout/activity_main.xml
+++ b/Shoppier/res/layout/activity_main.xml
@@ -73,9 +73,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/relativeLayout1"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="1dp"
             android:clickable="true"
-            android:text="@string/skip" />
+            android:text="Register" />
 
 <!--         <ProgressBar -->
 <!--             android:id="@+id/progressBarMainScreen" -->
