--- a/Shoppier/res/layout/add_list.xml
+++ b/Shoppier/res/layout/add_list.xml
@@ -4,27 +4,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/back"
     android:orientation="vertical" >
-    
-     <EditText
-            android:id="@+id/list_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="95dp"
-            android:ems="10"
-            android:hint="Ex: Grocery List" >
-            <requestFocus />
-        </EditText>
 
-       <TextView
-           android:id="@+id/textView1"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_alignBottom="@+id/list_name"
-           android:layout_alignLeft="@+id/list_name"
-           android:layout_marginBottom="42dp"
-           android:text="@string/list_name" />
 
        <Spinner
            android:id="@+id/newlist_storespinner"
@@ -34,13 +14,44 @@
            android:layout_alignRight="@+id/list_name"
            android:layout_below="@+id/list_name" />
 
-       <ImageButton
+       <Button
            android:id="@+id/but_add_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newlist_storespinner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
-           android:src="@android:drawable/ic_input_add" />
+           android:text="@string/create_list" />
+
+       <EditText
+           android:id="@+id/list_name"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_alignParentRight="true"
+           android:layout_alignParentTop="true"
+           android:layout_marginRight="29dp"
+           android:layout_marginTop="94dp"
+           android:background="@drawable/blank"
+           android:ems="10"
+           android:hint="@string/list_name"
+           android:singleLine="true" />
+
+       <TextView
+           android:id="@+id/textView1"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_alignBaseline="@+id/list_name"
+           android:layout_alignBottom="@+id/list_name"
+           android:layout_toLeftOf="@+id/list_name"
+           android:text="Name: " />
+
+       <TextView
+           android:id="@+id/textView2"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_alignTop="@+id/newlist_storespinner"
+           android:layout_marginTop="14dp"
+           android:layout_toLeftOf="@+id/newlist_storespinner"
+           android:text="Location: " />
 
 </RelativeLayout>
