--- a/Shoppier/res/layout/activity_groc_list.xml
+++ b/Shoppier/res/layout/activity_groc_list.xml
@@ -24,13 +24,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true" >
+        android:layout_alignParentRight="true"
+        android:columnCount="2" >
 
         <Button
             android:id="@+id/searchBtn"
             android:layout_width="146dp"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_horizontal"
+            android:layout_row="1"
             android:background="@drawable/trans"
             android:text="@string/add" />
 
@@ -41,6 +43,21 @@
             android:layout_gravity="fill_horizontal"
             android:background="@drawable/trans"
             android:text="Route" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_column="1"
+            android:layout_gravity="left|top"
+            android:layout_row="0"
+            android:text="Total:" />
+
+        <TextView
+            android:id="@+id/totalCost"
+            android:layout_column="1"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_row="0"
+            />
+
     </GridLayout>
 
 </RelativeLayout>
